# CyberSecNews

./: .gitignore  CLAUDE.md  LICENSE  README.md  config.example.yaml  pyproject.toml
.github/workflows/: ci.yml  daily.yml
data/: seen.db
public/: atom.xml
src/cybersecnews/: __init__.py  __main__.py  cli.py  config.py  db.py  dedup.py  feed.py  logging_setup.py  models.py  notify.py  pipeline.py  report.py
src/cybersecnews/connectors/: __init__.py  base.py  cisa_kev.py  github_advisories.py  http.py  rss.py
src/cybersecnews/llm/: __init__.py  anthropic_client.py  base.py  stub.py
tests/: conftest.py  test_config.py  test_dedup.py  test_feed.py  test_json_connectors.py  test_notify.py  test_pipeline.py  test_report.py  test_rss.py
