[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "cybersecnews"
version = "0.1.0"
description = "Daily cybersecurity news aggregator focused on zero/n-day vulnerabilities and red-team tradecraft"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "feedparser>=6.0",
    "requests>=2.31",
    "anthropic>=0.40",
    "PyYAML>=6.0",
    "python-dateutil>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "responses>=0.25",
]

[project.scripts]
cybersecnews = "cybersecnews.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
